--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -93,11 +93,13 @@ nav {
   display: flex;
   align-items: center;
   color: $fourth-color;
-  justify-content: space-between;
+  justify-content: space-around;
   margin: 10vh;
   font-size: 24px;
   right: 0;
   left: 0;
+  min-height: 300px;
+  height: 62vh;
 
   h1 {
     font-size: 70px;
@@ -105,8 +107,9 @@ nav {
   }
 
   img {
-    height: 40%;
+    height: 100%;
     width: 40%;
+    max-width: 600px;
     -webkit-filter: drop-shadow(5px 5px 5px #222);
     filter: drop-shadow(5px 5px 5px #222);
   }
