--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -117,6 +117,7 @@ nav {
         font-style: none;
         color: $primary-color;
         text-decoration: none;
+        padding-left: 10px;
       }
 
       &:hover {
