--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -180,39 +180,42 @@ nav {
     transform-origin: top;
     display: block;
   }
-  h1 {
-    padding-top: 5vh;
-    font-size: 3em;
-    text-align: center;
-    letter-spacing: 0.5px;
-    font-family: $font-fam;
-    color: $primary-color;
-    margin: 0;
-  }
+
   .carousel-wrapper {
+    max-height: 100vh;
     height: 100% !important;
     width: 100% !important;
-    video {
-      color: #003459 !important;
-      height: 55%;
-      width: 55%;
-      margin-bottom: 13% !important;
-      margin-left: 23% !important;
-      margin-top: 4%;
-      -webkit-filter: drop-shadow(5px 5px 5px #222);
-      filter: drop-shadow(5px 5px 5px #222);
+    h1 {
+      padding-top: 0.5em;
+      font-size: 3em;
+      text-align: center;
+      letter-spacing: 0.5px;
+      font-family: $font-fam;
+      color: $primary-color;
+      margin: 0;
+    }
+    .video-wrapper {
+      display: flex;
+      video {
+        color: #003459 !important;
+        height: 60%;
+        width: 60%;
+        margin: 2em auto 8em auto;
+        -webkit-filter: drop-shadow(5px 5px 5px #222);
+        filter: drop-shadow(5px 5px 5px #222);
+      }
     }
   }
 
   .carousel-control-prev-icon {
-    width: 40% !important;
-    height: 40% !important;
+    width: 40px !important;
+    height: 40px !important;
     background-image: url(/assets/arrow.svg);
     transform: rotate(90deg) !important;
   }
   .carousel-control-next-icon {
-    width: 40% !important;
-    height: 40% !important;
+    width: 40px !important;
+    height: 40px !important;
     background-image: url(/assets/arrow.svg);
     transform: rotate(270deg) !important;
   }
