--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -192,7 +192,7 @@ nav {
   .carousel-wrapper {
     height: 100% !important;
     width: 100% !important;
-    video {
+    img {
       color: #003459 !important;
       height: 55%;
       width: 55%;
