--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -221,17 +221,17 @@ nav {
   }
 
   .carousel-control-prev-icon {
-    width: 8vw !important;
-    height: 8vh !important;
-    background-image: url(/assets/arrow.svg);
+    width: 4vw !important;
+    height: 4vh !important;
+    background-image: url(/assets/arrow-svg.svg);
     transform: rotate(90deg) !important;
     margin-right: 5vw;
     margin-bottom: 20vh;
   }
   .carousel-control-next-icon {
-    width: 8vw !important;
-    height: 8vh !important;
-    background-image: url(/assets/arrow.svg);
+    width: 4vw !important;
+    height: 4vh !important;
+    background-image: url(/assets/arrow-svg.svg);
     transform: rotate(270deg) !important;
     margin-left: 5vw;
     margin-bottom: 20vh;
