--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -117,6 +117,11 @@ nav {
     letter-spacing: 1px;
   }
 
+  .one-liner {
+    font-size: 0.7em;
+    max-width: 80%;
+  }
+
   img {
     height: 100%;
     width: 40%;
