--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -39,6 +39,31 @@ nav {
     width: 4rem !important;
   }
 
+  @media screen and (max-width: 520px) {
+    img {
+      margin-left: 1em;
+    }
+    .navbar-nav {
+      margin-top: 1em;
+    }
+    .navbar-toggler {
+      margin-right: 1em;
+    }
+    .navbar-text {
+      padding-left: 20px;
+    }
+    .slackLink {
+      justify-content: start !important;
+      a {
+        padding-left: 20px;
+      }
+      margin-bottom: 1em;
+    }
+    .form-inline {
+      display: none;
+    }
+  }
+
   .navbar-brand {
     font-weight: 600;
     font-size: 1.7em;
@@ -50,7 +75,7 @@ nav {
   a {
     font-size: 1.3em;
     color: $primary-color !important;
-    padding-left: 1em;
+    padding-left: 20px;
 
     &:hover {
       color: $secondary-color !important;
@@ -111,6 +136,33 @@ nav {
   left: 0;
   min-height: 300px;
   height: 62vh;
+
+  @media screen and (min-width: 421px) and (max-width: 768px) {
+    h1 {
+      font-size: 3em;
+    }
+  }
+  @media screen and (max-width: 520px) {
+    margin: 2em;
+
+    h1 {
+      margin-top: 1em;
+      font-size: 2em;
+    }
+    img {
+      display: none;
+    }
+    .one-liner {
+      max-width: 100% !important;
+    }
+    .button-wrapper {
+      flex-direction: column;
+      button {
+        flex-grow: 1;
+        margin: 0.5em 0 !important;
+      }
+    }
+  }
 
   h1 {
     font-size: 70px;
@@ -241,6 +293,18 @@ nav {
     margin-left: 5vw;
     margin-bottom: 20vh;
   }
+
+  @media screen and (max-width: 520px) {
+    h1 {
+      margin: 0.5em auto !important;
+    }
+    height: min-content;
+    .carousel-caption {
+      h2 {
+        font-size: 1.3em;
+      }
+    }
+  }
   .carousel-caption {
     color: $primary-color;
     padding-bottom: 6vh !important;
@@ -258,6 +322,25 @@ nav {
 // ----DOWNLOAD----
 #download-title {
   margin-top: 5%;
+
+  @media screen and (max-width: 520px) {
+    h1 {
+      margin: 0.5em auto;
+    }
+    #download {
+      margin: 1em auto !important;
+    }
+    .download-icon {
+      width: 48px;
+      svg {
+        width: 48px;
+        height: 48px;
+      }
+      p {
+        font-size: 0.7em;
+      }
+    }
+  }
 
   h1 {
     font-style: $font-fam;
@@ -305,6 +388,38 @@ nav {
   display: flex;
   justify-content: space-around;
   flex-direction: column;
+
+  @media screen and (max-width: 520px) {
+    padding-bottom: 1em;
+    padding-top: 0;
+    height: min-content;
+
+    #community-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .animated {
+        animation-duration: 0s !important;
+        opacity: 1 !important;
+      }
+      figcaption {
+        padding: 1em 0;
+      }
+    }
+
+    h1 {
+      margin: 0.5em auto !important;
+    }
+    h2 {
+      font-size: 20px;
+    }
+    h3 {
+      display: none;
+    }
+    #line {
+      display: none;
+    }
+  }
 
   #line {
     border-left: 6px solid $primary-color;
@@ -364,6 +479,27 @@ nav {
 
 /* Team */
 .team-wrapper {
+  @media screen and (max-width: 520px) {
+    h1 {
+      margin: 0.5em auto !important;
+    }
+    .team-container {
+      display: flex;
+      flex-direction: column;
+      .teamProfile {
+        h4 {
+          padding-top: 0.5em;
+          font-size: 1.3em;
+        }
+        .team-links {
+          justify-content: space-around !important;
+          svg {
+            width: 28px;
+          }
+        }
+      }
+    }
+  }
   h1 {
     color: $fourth-color;
     display: flex;
