refixed features imgs

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -308,6 +308,7 @@ nav {
     .video-wrapper {
       display: flex;
       img {
+        height: 30vw !important;
         width: 56vw !important;
       }
     }
