fixed landscape on mobile

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,5 @@ $fifth-color: #fff1b8;
 $hover-color: #e0e9f1;
 $border: 1px solid #003459;
 $font-fam: 'Sen', 'Baloo Thambi 2', sans-serif;
+
+$mobile: 812px;
